Update requirements.txt to specify versions for requests, urllib3, chardet, and charset-normalizer

--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,9 @@ osmnx
 scikit-learn
 plotly
 pickle-mixin
-requests
+requests>=2.28.0
+urllib3>=1.26.0
+chardet>=4.0.0
+charset-normalizer>=2.0.0
 geopandas
 shapely
