--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,17 @@
-osmnx
-geopandas
-streamlit
-pandas
-numpy
-folium
-streamlit-folium
-networkx
-osmnx
-scikit-learn
-plotly
-pickle-mixin
-requests
-requests>=2.28.0
-urllib3>=1.26.0
-chardet>=4.0.0
-charset-normalizer>=2.0.0
-geopandas
-shapely
+streamlit>=1.28.0
+pandas>=1.5.0
+numpy>=1.24.0
+scikit-learn>=1.3.0
+scipy>=1.10.0
+plotly>=5.15.0
+folium>=0.14.0
+streamlit-folium>=0.13.0
+matplotlib>=3.7.0
+seaborn>=0.12.0
+geopy>=2.3.0
+overpy>=0.6
+requests>=2.31.0
+networkx>=3.1
+dataclasses
+typing
+osmnx>=1.6.0  
