--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,28 @@
-streamlit>=1.28.0
-pandas>=1.5.0
-numpy>=1.24.0
-scikit-learn>=1.3.0
-scipy>=1.10.0
-plotly>=5.15.0
-folium>=0.14.0
-streamlit-folium>=0.13.0
-matplotlib>=3.7.0
-seaborn>=0.12.0
-geopy>=2.3.0
-overpy>=0.6
-requests>=2.31.0
-networkx>=3.1
+streamlit
+pandas
+numpy
+scikit-learn
+scipy
+plotly
+folium
+streamlit-folium
+matplotlib
+seaborn
+geopy
+overpy
+requests
+networkx
 dataclasses
 typing
-osmnx>=1.6.0
-geopandas>=0.13.0
-shapely>=2.0.0
-pyogrio>=0.5.0
+osmnx
+geopandas
+shapely
+pyogrio
+torch
+torchvision
+torchaudio
+torch-geometric
+torch-scatter
+torch-sparse
+torch-cluster
+torch-spline-conv
