--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,37 @@
-/__pycache__
-/data
-/cache
+# Ignore large files that exceed GitHub's LFS limit
+data/switzerland-latest.osm.pbf
+data/pop_hectare_grid_latlon.geojson
+data/pop_grid_centroids.csv
+
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*.py[cod]
+*$py.class
+
+# Distribution / packaging
+dist/
+build/
+*.egg-info/
+
+# Virtual environments
+venv/
+env/
+ENV/
+
+# IDE specific files
+.idea/
+.vscode/
+*.swp
+*.swo
+
+# Jupyter Notebook
+.ipynb_checkpoints
+
+# Local configuration
+.env
+.env.local
+.env.*.local
+
+# OS specific files
+.DS_Store
+Thumbs.db
